--- a/CSS/style.css
+++ b/CSS/style.css
@@ -966,11 +966,11 @@ header {
 .burger {
   display: none;
 }
-.burger_menu{
+.burger_menu {
   display: none;
 }
 
-@media (max-width: 1200px){
+@media (max-width: 1200px) {
   .header_menu {
     display: flex;
     max-width: 960px;
@@ -1032,7 +1032,7 @@ header {
     height: 22px;
     margin-left: 0px;
   }
-  .burger_menu{
+  .burger_menu {
     display: none;
   }
 }
@@ -1041,7 +1041,7 @@ header {
   .burger {
     display: none;
   }
-  .burger_menu{
+  .burger_menu {
     display: none;
   }
   body {
@@ -2097,8 +2097,8 @@ header {
     height: 18px;
     margin-top: 43px;
   }
-  .burger:hover{
-    background-color:grey;
+  .burger:hover {
+    background-color: grey;
     cursor: pointer;
   }
 
@@ -2112,7 +2112,7 @@ header {
     left: 0;
     background-color: white;
     margin: 0px 0px 0px 200px;
-    border:1px solid black;
+    border: 1px solid black;
   }
   .b_menu {
     display: flex;
@@ -2189,18 +2189,728 @@ header {
     gap: 70px;
     justify-content: center;
   }
-  .hidden{
+  .hidden {
     display: flex;
-    background-color:transparent;
-    border:0;
+    background-color: transparent;
+    border: 0;
     margin: 20px 20px 0px 320px;
   }
-  .hidden:hover{
-    background-color:#f7f2ea;;
+  .hidden:hover {
+    background-color: #f7f2ea;
     cursor: pointer;
   }
-  .shadow{
-    background-color:whitesmoke;
+  .shadow {
+    background-color: whitesmoke;
+    opacity: 0.2;
+    transition: 0.1s;
+  }
+}
+
+@media (max-width: 480px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    max-width: 468px;
+  }
+  main {
+    display: flex;
+    gap: 0px;
+    opacity: 0px;
+    max-width: 468px;
+    max-height: 5562px;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+  header {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+  }
+  .header_menu {
+    display: flex;
+    max-width: 460px;
+    height: 56px;
+    margin: 10px;
+    padding-top: 0;
+    justify-content: flex-start;
+  }
+  .header_picture {
+    display: flex;
+    max-width: 480px;
+    height: 500px;
+    margin-top: 0;
+    background-image: linear-gradient(rgba(0, 0, 0, 0) 40.1%, #000000 97.4%),
+      url(/img/BG480.png);
+    background-size: cover;
+    background-position: 100%;
+    background-repeat: no-repeat;
+  }
+
+  .logo {
+    display: flex;
+    width: 39px;
+    height: 56px;
+    margin-left: 171px;
+    margin-right: 80px;
+  }
+  .logo_480 {
+    width: 39px;
+    height: 56px;
+  }
+
+  .nav_menu {
+    display: none;
+  }
+  .nav_ul {
+    list-style-type: none;
+  }
+
+  .nav_a {
+    display: flex;
+    text-decoration: none;
+    color: black;
+    width: 57px;
+    height: 27px;
+    padding: 0px 5px 2px 0px;
+    font-family: Open Sans;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24.51px;
+    text-align: left;
+  }
+  .account {
+    display: flex;
+    width: 130px;
+    height: 29px;
+    margin-top: 13px;
+    gap: 40px;
+    justify-content: flex-start;
+  }
+  .acc {
+    display: flex;
+    flex-direction: row;
+    width: 58px;
+    height: 29px;
+    gap: 20px;
+  }
+  .search {
+    display: flex;
+    width: 22px;
+    height: 22px;
+    margin-left: 0px;
+  }
+  .header_text {
+    display: flex;
+    margin: 276px 20px 50px 9px;
+    width: 684px;
+    height: 120px;
+    opacity: 0px;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .text_1 {
+    display: flex;
+    font-family: Cormorant;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 48.44px;
+    text-align: left;
+    color: white;
+    margin-bottom: 20px;
+    width: 450px;
+    height: 120px;
+  }
+  .text_2{
+    display: flex;
+    width: 450px;
+    height:58px;
+  }
+  .content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    margin-top: 60px;
+  }
+  .citation {
+    display: flex;
+    max-width: 376px;
+    height: 44px;
+    margin-top: 0px;
+  }
+  .citation_text {
+    display: flex;
+    font-family: Cormorant;
+    font-size: 16px;
+    font-style: italic;
+    font-weight: 300;
+    line-height: 21.79px;
+    text-align: center;
+    color: #151618;
+    width: 376px;
+    height: 44px;
+  }
+  .teas {
+    display: flex;
+    width: 416px;
+    max-height: 100%;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-bottom: 60px;
+    margin-top: 60px;
+    align-items: center;
+  }
+  .teas_text {
+    display: flex;
+    width: 369px;
+    height: 48px;
+    font-family: Cormorant;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 48.44px;
+    text-align: left;
+  }
+  .teas_pic {
+    display: flex;
+    width: 416px;
+    height: 100%;
+    margin-top: 30px;
+    gap: 0px;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .teas_ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    width: 416px;
+    height: 819px;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 0;
+    margin-left: 0;
+  }
+  .teas_li {
+    display: flex;
+    flex-direction: column;
+    font-family: Cormorant;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 29.06px;
+    text-align: left;
+    color: #000000;
+    text-align: center;
+    width: 208px;
+    height: 247px;
+    gap: 0px;
+  }
+  .teas_li:not(:first-child) {
+    display: flex;
+    flex-direction: column;
+    transform: translateX(0px);
+  }
+  .teas_li:nth-child(3) {
+    display: flex;
+    flex-direction: column;
+    transform: translateX(0px);
+  }
+  .teas_li:nth-child(4) {
+    display: flex;
+    flex-direction: column;
+    transform: translateX(0px);
+  }
+  .teas_li:nth-child(5) {
+    display: flex;
+    flex-direction: column;
+    transform: translateX(0px);
+  }
+  .testimonials {
+    display: flex;
+    width: 480px;
+    height: 588px;
+    gap: 0px;
+    opacity: 0.5px;
+    background: #f7f2ea;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .testimonials_text{
+    margin-top: 50px;
+  }
+  .testi {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    max-width: 480px;
+    height: 100%;
+    justify-content: space-around;
+    margin-bottom: 50px;
+    margin-top: 50px;
+  }
+  .testi_ul {
+    gap: 10px;
+    display: flex;
+    list-style-type: none;
+    width: 100%;
+    height: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-left: 10px;
+  }
+  .testi_li {
+    max-width: 220px;
+    height: 213px;
+    opacity: 0px;
+    flex-direction: column;
+  }
+  .testi_li:nth-child(2) {
+    order: 4;
+  }
+  .testi_li:nth-child(1) {
+    order: -2;
+  }
+  .testi_li:nth-child(4) {
+    display: flex;
+    max-width: 220px;
+    height: 213px;
+    opacity: 0px;
+    flex-direction: column;
+    order: -1;
+  }
+  .blog {
+    display: flex;
+    max-width: 460px;
+    height: 100%;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0px;
+    border: 0px;
+    opacity: 0px;
+    flex-direction: column;
+    margin-top: 150px;
+    margin: 60px 10px 0px 10px;
+  }
+  .blog_article {
+    display: flex;
+    flex-wrap: wrap;
+    width: 450px;
+    height: 921px;
+    gap: 30px;
+    justify-content: flex-start;
+    margin: 60px 10px 60px 10px;
+  }
+  .article_2,
+  .article_4 {
+    margin-left: 0px;
+  }
+  .article_1 {
+    display: flex;
+    flex-direction: row;
+    max-width: 100%;
+    width: 450px;
+    height: 153px;
+    gap: 15px;
+    justify-content: flex-start;
+  }
+  .article_1_pic {
+    width: 230px;
+    height: 153px;
+  }
+  .blog_div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 210px;
+    height: 153px;
+  }
+  .article_text_1 {
+    display: flex;
+    width: 210px;
+    height: 86px;
+    font-family: Cormorant;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 29.06px;
+    text-align: left;
+    color: #151618;
+  }
+  .article_text_2 {
+    display: flex;
+    font-family: Open Sans;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 17.7px;
+    text-align: left;
+    width: 169px;
+    height: 18px;
+    gap: 0px;
+    opacity: 0px;
+    margin-top: 10px;
+    color: #151618;
+  }
+  .article_read {
+    display: flex;
+    text-decoration: none;
+    flex-direction: row;
+    font-family: Open Sans;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 17.7px;
+    text-align: left;
+    width: 43px;
+    height: 18px;
+    gap: 0px;
+    opacity: 0px;
+    color: #151618;
+    margin-top: 21px;
+  }
+  .right {
+    display: flex;
+    width: 5px;
+    height: 10px;
+    margin-top: 4px;
+    margin-left: 8px;
+  }
+  .blog_button{
+    margin-top: 0px;
+  }
+  .subscribe {
+    display: flex;
+    max-width: 480px;
+    width: 100%;
+    height: 415px;
+    margin-top: 60px;
+    background-color: #f7f2ea;
+    background-image: url(/img/sub_pic.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    flex-direction: column;
+  }
+  .sub_text {
+    display: flex;
+    width: 460px;
+    height: 150px;
+    flex-direction: column;
+    margin: 50px 10px 30px 10px;
+    justify-content: flex-start;
+    gap: 0px;
+    align-items: center;
+  }
+  .sub_text_1 {
+    display: flex;
+    font-family: Cormorant;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 48.44px;
+    text-align: left;
+    color: #151618;
+    margin-bottom: 30px;
+  }
+  .sub_text_2 {
+    display: flex;
+    font-family: Open Sans;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 17.7px;
+    text-align: left;
+    color: #151618;
+    text-align: center;
+    width: 460px;
+    height: 72px;
+  }
+  .sub_form {
+    display: flex;
+    max-width: 460px;
+    height: 135px;
+    margin-top: 0px;
+    margin-left: 10px;
+    flex-direction: column;
+  }
+  .checkbox_text{
+    width: 439px ;
+    height: 72px ;
+  }
+  .prioritise {
+    display: flex;
+    max-width: 768px;
+    height: 926px;
+    margin: 60px 98px 60px 88px;
+    width: 100%;
+    flex-direction: column;
+    gap: 0px;
+    align-items: center;
+  }
+  .prioritise_text {
+    display: flex;
+    width: 207px;
+    height: 47.96px;
+    font-family: Cormorant;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 48.44px;
+    color: #151618;
+    margin-left: 0px;
+  }
+  .prioritise_frame {
+    display: flex;
+    flex-wrap: wrap;
+    max-width:294px;
+    height: 848px;
+    margin-top: 30px;
+    row-gap: 30px;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .prioritise_frame_1 {
+    display: flex;
+    flex-direction: column;
+    width: 248px;
+    height: 178px;
+    margin-right: 0;
+    margin-left: 0;
+    align-items: center;
+  }
+
+  .frame_text_1 {
+    display: flex;
+    font-family: Open Sans;
+    font-size: 30px;
+    font-weight: 300;
+    line-height: 40.85px;
+    text-align: center;
+    width: 100%;
+    height: 41px;
+    color: #151618;
+    justify-content: center;
+  }
+  .frame_text_2 {
+    display: flex;
+    font-family: Open Sans;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 27.24px;
+    color: #151618;
+    width: 294px;
+    height: 27px;
+    margin-top: 10.03px;
+    justify-content: center;
+    justify-content: center;
+    font-style: big;
+  }
+  .prioritise_frame_3 {
+    display: flex;
+    flex-direction: column;
+    width: 294px;
+    height: 170px;
+    margin-right: auto;
+  }
+  .frame_pic_3 {
+    display: flex;
+    margin-left: 0px;
+  }
+  .footer {
+    display: flex;
+    max-width: 480px;
+    height: 853px;
+    background-color: #f7f2ea;
+    margin-top: 0px;
+    flex-direction: column;
+  }
+  .footer_info {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: 100%;
+    height: 479px;
+    margin-top: 50px;
+  }
+  .footer_menu {
+    display: flex;
+    flex-direction: column;
+    width: 97px;
+    height: 269px;
+    margin-left: 20px;
+    gap: 30px;
+  }
+  .footer_menu_comp {
+    display: flex;
+    flex-direction: column;
+    width: 155px;
+    height: 353px;
+    margin-left: 133px;
+    gap: 30px;
+  }
+  .quatation {
+    display: flex;
+    width: 460px;
+    height: 92px;
+    margin-top: 383px;
+    margin-left: -395px;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .quatation_text_1{
+    width: 100%;
+    height: 100%;
+  }
+  .quatation_text_2{
+    width: 100%;
+    height: 100%;
+  }
+  .contacts {
+    display: flex;
+    width: 460px;
+    height: 196px;
+    margin-left: -405px;
+    flex-direction: column;
+    margin-top: 525px;
+  }
+  .contacts_text_1{
+    width: 100%;
+    height: 29px;
+    justify-content: center;
+  }
+  .contacts_text_2{
+    width: 100%;
+    height: 36px;
+    justify-content: center;
+    margin-top: 20px;
+    text-align: center;
+  }
+  .cont_number{
+    margin-top: 16px;
+  }
+  .icons{
+    margin-top: -50px ;
+    margin-left: 270px ;
+  }
+  .footer_bottom {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 427px;
+    height: 22px;
+    margin-top: 296px;
+    margin-left: 20px;
+    margin-bottom: 10px;
+  }
+  .burger {
+    display: flex;
+    background-color: transparent;
+    border: 0;
+    width: 40px;
+    height: 18px;
+    margin-top: 19px;
+  }
+  .burger:hover {
+    background-color: grey;
+    cursor: pointer;
+  }
+
+  .burger_menu {
+    display: none;
+    flex-direction: column;
+    width: 360px;
+    height: 691px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #FFFFFF;
+    ;
+    margin: 0px 60px 0px 60px;
+    border: 1px solid black;
+  }
+  .b_menu {
+    display: flex;
+    width: 71px;
+    height: 265px;
+    gap: 30px;
+    margin-left: 145px;
+    margin-top: 20px;
+  }
+  .b_menu_ul {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 100%;
+  }
+  .b_menu_li {
+    display: flex;
+    list-style-type: none;
+    display: flex;
+    width: 100%;
+  }
+  .b_a {
+    display: flex;
+    width: 100%;
+    text-decoration: none;
+    color: black;
+    font-family: Cormorant;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 29.06px;
+    text-align: left;
+    height: 29px;
+    gap: 0px;
+    opacity: 0px;
+  }
+  .b_pic {
+    display: flex;
+    width: 300px;
+    height: 2px;
+    margin: 60px 30px 60px 30px;
+  }
+  .b_contacts {
+    display: flex;
+    width: 127px;
+    height: 124px;
+    margin-left: 117px;
+    gap: 35px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .b_cont_a {
+    display: flex;
+    text-decoration: none;
+    color: black;
+    font-family: Open Sans;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 17.7px;
+    text-align: left;
+  }
+  .b_bag_acc_search {
+    display: flex;
+    width: 360px;
+    height: 60px;
+    background-color: #f7f2ea;
+    margin-top: 60px;
+  }
+  .b_bag_a {
+    display: flex;
+    width: 200px;
+    height: 22px;
+    margin: 20px 79px 18px 81px;
+    gap: 70px;
+    justify-content: center;
+  }
+  .hidden {
+    display: flex;
+    background-color: transparent;
+    border: 0;
+    margin: 20px 20px 0px 320px;
+  }
+  .hidden:hover {
+    background-color: #f7f2ea;
+    cursor: pointer;
+  }
+  .shadow {
+    background-color: whitesmoke;
     opacity: 0.2;
     transition: 0.1s;
   }
